public/frontend/styles/style.css
/* ... */
.goodtime_card_preview {
    top: 50vh;
    bottom: 0;
    right: 0;
    z-index: 1;
    animation: fadeIn;
    animation-duration: 1.5s;
}

.goodtime_card_preview .ornament__img {
    width: 400px;
}

/* Carousel */

.carousel-inner .carousel-item.active,
.carousel-inner .carousel-item-next,
.carousel-inner .carousel-item-prev {
    display: flex;
}

.carousel-item img {
    max-height: 608px;
}

/* Leaderboard */
.leaderboard {
    --gt-leaderboard-gold-bg: linear-gradient(57.35deg, #E8B363 6.86%, #E8BA6E 38.33%, #EFCC8F 51.33%, #E4B577 67.63%, #E39A3E 90.8%);
    --gt-leaderboard-silver-bg: linear-gradient(57.35deg, #E8B363 6.86%, #E8BA6E 38.33%, #EFCC8F 51.33%, #E4B577 67.63%, #E39A3E 90.8%);
    --gt-leaderboard-bronze-bg: linear-gradient(57.35deg, #E8B363 6.86%, #E8BA6E 38.33%, #EFCC8F 51.33%, #E4B577 67.63%, #E39A3E 90.8%);
    /* --gt-leaderboard-silver-bg: #d70227;
    --gt-leaderboard-bronze-bg: #7d001e; */
    --gt-leaderboard-regular-bg: #ffffff;
    --gt-leaderboard-color-bg-light: #000000;
    --gt-leaderboard-color-bg-dark: #ffffff;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    flex-grow: 1;
    max-height: 400px;
    overflow-y: auto;
}

.leaderboard__title {
    margin-bottom: 1rem;
    font-size: 1.5rem;
}

.leaderboard .leaderboard__item {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(255 255 255 / 50%);
    color: var(--gt-leaderboard-color-bg-light);
    border-radius: var(--bs-border-radius-pill);
    padding: .75rem;
}

.leaderboard .leaderboard__item:not(:last-child) {
    margin-bottom: 1rem;
}

.leaderboard .leaderboard__regular {
    background: var(--gt-leaderboard-regular-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

.leaderboard .leaderboard__gold {
    background: var(--gt-leaderboard-gold-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

.leaderboard .leaderboard__silver {
    background: var(--gt-leaderboard-silver-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

.leaderboard .leaderboard__bronze {
    background: var(--gt-leaderboard-bronze-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

.leaderboard__rank .rank__icon,
.leaderboard__rank .rank__name {
    display: inline-block;
    margin: 0;
}

.rank__name span {
    display: block;
}

.leaderboard__item .leaderboard__rank {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
}

.leaderboard__item .leaderboard__rank>.rank__icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin-right: 1rem;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    background-color: rgb(255 255 255 / 40%);
    text-align: center;
}

.leaderboard__item .leaderboard__rank>.rank__icon img {
    width: 24px;
    height: 24px;
}

.leaderboard__item .leaderboard__point {
    min-width: 64px;
    padding: .5rem .75rem;
    text-align: center;
    border-radius: var(--bs-border-radius-pill);
}

.leaderboard__gold .leaderboard__point,
.leaderboard__silver .leaderboard__point,
.leaderboard__bronze .leaderboard__point,
.leaderboard__regular .leaderboard__point {
    background-color: rgb(255 255 255 / 60%);
    color: var(--gt-leaderboard-color-bg-light);
}

/* Inputs */

.input-group-text {
    border-top-right-radius: 3rem;
    border-bottom-right-radius: 3rem;
    background-color: rgb(234 237 240 / 60%);
    color: var(--bs-white);
    padding: 0.5rem 0.75rem;
    ;
    border: none;
}

.input-group>.form-floating:not(:first-child)>.form-control,
.input-group>.form-floating:not(:first-child)>.form-select,
.input-group> :not(:first-child):not(.dropdown-menu):not(.form-floating):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
    margin-left: 0;
}

.custom-form-control {
    border-top-left-radius: 3rem;
    border-bottom-left-radius: 3rem;
    border-top-right-radius: 3rem;
    border-bottom-right-radius: 3rem;
    border: none;
    padding: 0.5rem 0.75rem;
    background-color: rgb(234 237 240 / 60%);
    color: var(--bs-white);
}

.custom-form-control::placeholder {
    color: var(--bs-white);
}

.input-group .custom-form-control {
    border-top-right-radius: 3rem;
    border-bottom-right-radius: 3rem;
    border: none;
    padding: 0.5rem 1.5rem;
    background-color: rgb(234 237 240 / 60%);
    color: var(--bs-white);
}

.chips {
    position: relative;
    width: 100%;
    height: 56px;
}

.chip-wrapper {
    width: 100%;
    height: 56px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: start;
    overflow-x: hidden;
    scroll-behavior: smooth;
    padding: 0 2.5rem;
}

.chip-wrapper .chip-item {
    margin-right: 1rem;
    flex: 0 0 auto;
    width: auto;
}

.chip-controls {
    width: 100%;
    height: 56px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    top: 0;
    left: 0;
}

.chip-controls button {
    border: 0;
    cursor: pointer;
    font-size: 1.5rem;
    background: var(--gt-yellow-bg);
    color: var(--bs-black);
    width: 32px;
    height: 32px;
    border-radius: 50%;
    z-index: 10;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.chip-controls button:hover {
    background-color: rgb(255 255 255);
    color: rgb(253 249 13 / 60%);
}

.chip-controls button:focus {
    outline: none
}
/* ... */

